# my_nrf_ncs

./: .gitignore  README.md
app/: CMakeLists.txt  prj.conf
app/boards/: nrf52840dk_nrf52840.overlay
app/platform_nrf/: readme.txt
app/platform_nrf/bus/: m_spi.c  m_spi.h
app/src/: main.c
ncs_prj/: readme.txt
